infrastructure/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: logging
spec:
  rules:
  - http:
      paths:
      - path: /opensearch
        pathType: Prefix
        backend:
          service:
            name: opensearch-dashboard-opensearch-dashboards
            port:
              number: 5601

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: monitoring
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: prometheus-stack-grafana
            port:
              number: 80
